--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <header>
         <h1>SELAMAT DATANG DI NGODEYOO</h1>
+        <h2>saya mizan hai hai</h2>
     </header>
 </body>
 </html>
