Saya menambahkan nama saya b aja

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <header>
         <h1>SELAMAT DATANG DI NGODEYOO</h1>
         <h2>saya mizan hai hai</h2>
+        <h2>Saya Senna B Aja</h2>
         <h3>sri haryani datang </h3>
     </header>
 </body>
